the UI changed a little

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -14,10 +14,10 @@
                     knowledge sharing, and collaborative development initiatives.
                 </p>
                 <div class="d-flex gap-3 flex-wrap">
-                    <a href="{{ url_for('resources.index') }}" class="btn btn-light btn-lg">
+                    <a href="/resources/" class="btn btn-light btn-lg">
                         <i class="fas fa-gem me-2"></i>Explore Resources
                     </a>
-                    <a href="{{ url_for('community.index') }}" class="btn btn-outline-light btn-lg">
+                    <a href="/community/" class="btn btn-outline-light btn-lg">
                         <i class="fas fa-users me-2"></i>Join Community
                     </a>
                 </div>
@@ -30,6 +30,7 @@
             </div>
         </div>
     </div>
+
 </section>
 
 <!-- Statistics Section -->
