--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,7 @@ body {
     bottom: 0;
     background: url('../images/pattern.png') repeat;
     opacity: 0.1;
+    pointer-events: none;
 }
 
 /* Cards */
@@ -77,6 +78,7 @@ body {
     padding: 0.5rem 1.5rem;
     font-weight: 500;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .btn-lg {
