--- a/templates/community/index.html
+++ b/templates/community/index.html
@@ -6,11 +6,19 @@
 <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2 class="mb-0"><i class="fas fa-users me-2"></i>Community</h2>
-        {% if current_user.is_authenticated %}
-        <a class="btn btn-primary" href="{{ url_for('community.create_post') }}">
-            <i class="fas fa-edit me-1"></i>New Post
-        </a>
-        {% endif %}
+        <div class="d-flex gap-2">
+            <a class="btn btn-outline-secondary" href="{{ url_for('community.chat') }}">
+                <i class="fas fa-comments me-1"></i>Open Chat
+            </a>
+            {% if current_user.is_authenticated %}
+            <a class="btn btn-outline-success" href="{{ url_for('community.chat') }}?create=1">
+                <i class="fas fa-plus me-1"></i>Create Room
+            </a>
+            <a class="btn btn-primary" href="{{ url_for('community.create_post') }}">
+                <i class="fas fa-edit me-1"></i>New Post
+            </a>
+            {% endif %}
+        </div>
     </div>
 
     <div class="card mb-3">
